--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
-
-/* Your CSS Code here. */
-.questions{
+.questions
+{
 	background-color:#f8fffe;
+	height:50px;
 	margin-top:20px;
-	padding:15px;
-	max-width:600px;
-	border-left:8px solid green;
+padding:15px;
+max-width:600px;
+border-top:8px solid green;
 }
